# aluminium

./: .gitignore  Cargo.toml  README.md  build.rs  clippy.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yaml
examples/: kajiya.rs  simple.rs
examples/android/: Cargo.toml
examples/android/src/: main.rs
examples/simple/: Cargo.toml
examples/simple/src/: gltf_loader.rs  main.rs
examples/view/: Cargo.toml
examples/view/src/: gltf_loader.rs  main.rs  ui.rs
kajiya-shaders/: blur.hlsl  calculate_reprojection_map.hlsl  convolve_cube.hlsl  copy_color.hlsl  copy_depth_to_r.hlsl  extract_half_res_depth.hlsl  extract_half_res_gbuffer_view_normal_rgba8.hlsl  final_blit.hlsl  light_gbuffer.hlsl  post_combine.hlsl  raster_simple_ps.hlsl  raster_simple_vs.hlsl
kajiya-shaders/dof/: coc.hlsl  gather.hlsl
kajiya-shaders/ibl/: ibl_cube.hlsl
kajiya-shaders/inc/: atmosphere.hlsl  atmosphere_felix.hlsl  bilinear.hlsl  bindless.hlsl  bindless_textures.hlsl  blue_noise.hlsl  brdf.hlsl  brdf_lut.hlsl  color.hlsl  cube_map.hlsl  curve.hlsl  frame_constants.hlsl  gbuffer.hlsl  hash.hlsl  image.hlsl  layered_brdf.hlsl  math.hlsl  math_const.hlsl  mesh.hlsl  morton.hlsl  pack_unpack.hlsl  quasi_random.hlsl  ray_cone.hlsl  reservoir.hlsl  rt.hlsl  samplers.hlsl  sh.hlsl  soft_color_clamp.hlsl  sun.hlsl  unjitter_taa.hlsl  uv.hlsl  working_color_space.hlsl
kajiya-shaders/inc/color/: bezold_brucke.hlsl  display_transform.hlsl  helmholtz_kohlrausch.hlsl  hlsl_to_glsl.glsl  ictcp.hlsl  ipt.hlsl  lab.hlsl  luv.hlsl  math.hlsl  oklab.hlsl  prelude.glsl  srgb.hlsl  standard_observer.hlsl  xyz.hlsl  ycbcr.hlsl
kajiya-shaders/inc/lights/: packed.hlsl  triangle.hlsl
kajiya-shaders/ircache/: age_ircache_entries.hlsl  bindings.hlsl  clear_ircache_pool.hlsl  ircache_compact_entries.hlsl  ircache_constants.hlsl  ircache_draw_debug.hlsl  ircache_grid.hlsl  ircache_sampler_common.inc.hlsl  ircache_trace_common.inc.hlsl  ircache_validate.rgen.hlsl  lookup.hlsl  prepare_age_dispatch_args.hlsl  prepare_trace_dispatch_args.hlsl  raster_origins_ps.hlsl  raster_origins_vs.hlsl  reset_entry.hlsl  scroll_cascades.hlsl  sum_up_irradiance.hlsl  trace_accessibility.rgen.hlsl  trace_irradiance.rgen.hlsl
kajiya-shaders/lighting/: sample_lights.rgen.hlsl  spatial_reuse_lights.hlsl
kajiya-shaders/lut/: bezold_brucke.hlsl  brdf_fg.hlsl
kajiya-shaders/motion_blur/: motion_blur.hlsl  velocity_dilate.hlsl  velocity_reduce_x.hlsl  velocity_reduce_y.hlsl
kajiya-shaders/old/csgi/: common.hlsl  debug_radiance.hlsl  decay_volume.hlsl  diagonal_sweep_volume.hlsl  direct_opacity_sum.hlsl  (+7 more)
kajiya-shaders/post/: luminance_histogram_calculate.hlsl  luminance_histogram_clear.hlsl  luminance_histogram_common.hlsl  luminance_histogram_copy.hlsl
kajiya-shaders/prefix_scan/: inclusive_prefix_scan.hlsl  inclusive_prefix_scan_merge.hlsl  inclusive_prefix_scan_segments.hlsl
kajiya-shaders/rt/: gbuffer.rchit.hlsl  gbuffer.rmiss.hlsl  reference_path_trace.rgen.hlsl  shadow.rmiss.hlsl  trace_sun_shadow_mask.rgen.hlsl
kajiya-shaders/rtdgi/: candidate_ray_dir.hlsl  diffuse_trace_common.inc.hlsl  diffuse_validate.rgen.hlsl  fullres_reproject.hlsl  near_field_settings.hlsl  occlusion_raymarch.hlsl  restir_check.rgen.hlsl  restir_resolve.hlsl  restir_spatial.hlsl  restir_temporal.hlsl  rtdgi_common.hlsl  rtdgi_restir_settings.hlsl  spatial_filter.hlsl  temporal_filter.hlsl  temporal_validity_integrate.hlsl  trace_diffuse.rgen.hlsl
kajiya-shaders/rtr/: reflection.rgen.hlsl  reflection_trace_common.inc.hlsl  reflection_validate.rgen.hlsl  resolve.hlsl  rtr_restir_pack_unpack.inc.hlsl  rtr_restir_temporal.hlsl  rtr_settings.hlsl  spatial_cleanup.hlsl  temporal_filter.hlsl
kajiya-shaders/shadow_denoise/: bitpack_shadow_mask.hlsl  megakernel.hlsl  spatial_filter.hlsl
kajiya-shaders/sky/: comp_cube.hlsl
kajiya-shaders/ssgi/: spatial_filter.hlsl  ssgi.hlsl  temporal_filter.hlsl  upsample.hlsl  ussgi.hlsl
kajiya-shaders/taa/: filter_history.hlsl  filter_input.hlsl  filter_prob.hlsl  filter_prob2.hlsl  input_prob.hlsl  input_variance.hlsl  input_variance_erode.hlsl  reproject_history.hlsl  taa.hlsl  taa_common.hlsl
kajiya-shaders/wrc/: bindings.hlsl  lookup.hlsl  trace_wrc.rgen.hlsl  wrc_intersect_probe_grid.hlsl  wrc_see_through.rgen.hlsl  wrc_settings.hlsl
shaders/: base_simple.frag  base_simple.vert  final.frag  final.vert  fullscreen_quad.vert  grid.frag  grid.vert  path_tracing.frag  path_tracing.vert  raster_final_ps.hlsl  raster_final_vs.hlsl  raster_ps.hlsl  raster_vs.hlsl  ray-tracing.frag
shaders/inc/: bindless.hlsl  constants.hlsl
shaders/spv/: base_simple_vert.spv  egui_frag.spv  egui_vert.spv  grid_frag.spv  grid_vert.spv  path_tracing-frag.spv  path_tracing_frag.spv  path_tracing_vert.spv  raster_ps.spv  raster_vs.spv
src/: lib.rs  world_renderer.rs
src/acceleration/: mod.rs
src/bindless/: mod.rs  native.rs  software.rs
src/buffering/: buffer.rs  command_pool.rs  mod.rs
src/bvh/: mod.rs
src/camera/: mod.rs
src/core/: app.rs  buffer.rs  command_pool.rs  debug.rs  descriptor_pool.rs  descriptor_set_layout.rs  device.rs  extensions.rs  fence.rs  frame_sync.rs  framebuffer.rs  graphics_pipeline.rs  image.rs  image_view.rs  instance.rs  mod.rs  phys_dev.rs  phys_features.rs  phys_prop.rs  pipeline_cache.rs  pipeline_layout.rs  queue_pool.rs  render_pass.rs  sampler.rs  semaphore.rs  shader.rs  subpass.rs  surface.rs  swapchain.rs  sync.rs  types.rs  utils.rs  vendor.rs
src/frame_graph/: mod.rs  pass_context.rs  render_target.rs  texture.rs  types.rs
src/frame_values/: mod.rs
src/per_frame/: buffer.rs  command_pool.rs
src/reflection/: mod.rs
src/render_context/: features.rs  graphics_device.rs  mod.rs  window_manager.rs
src/render_graph/: bindings.rs  command_pool.rs  mod.rs  pass_context.rs  resources.rs  vertex_input.rs
src/resource_manager/: arc_pool.rs  descriptor_manager.rs  materials.rs  mesh.rs  mod.rs  pool.rs  renderable.rs  texture.rs  transforms.rs
src/resources/: mod.rs
src/ring_buffer/: mod.rs
src/temporal/: frame_graph.rs  mod.rs  resources.rs
(+60 files in other folders)
