[package]
name = "aluminium"
version = "0.1.0"
edition = "2021"
authors = ["Oleg Pavlenko"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/olejaaaaaaaa/aluminium"
description = "vulkan-based rendering engine"
keywords = ["vulkan", "graphics", "rendering", "gamedev"]
categories = ["graphics", "game-engines", "rendering"]
build = "build.rs"

[dependencies]
ash = "0.38.0"
ash-window = "0.13.0"

vk-mem = { version = "0.5.0", optional = true }
gpu-allocator = { version = "0.28.0", features = ["vulkan"], optional = true }

vk-sync = "0.1.6"
winit = { version = "0.30.12", features = ["rwh_06"] }
naga = { version = "28.0.0", default-features = false, features = ["spv-in"] }
slotmap = "1.1.1"
bytemuck = { version = "1.24.0", features = ["derive"] }

log = { version = "0.4.29", default-features = false }
env_logger = { version = "0.11.8", default-features = false }
thiserror = { version = "2.0.17" }
puffin = { version = "0.19.1", default-features = false }
puffin_http = { version = "0.16.1", optional = true }

[features]
default = ["vma", "runtime-check", "validation_layer"]
gpu-allocator = ["dep:gpu-allocator"]
validation_layer = []
vma = ["dep:vk-mem"]
runtime-check = []
profiling = ["dep:puffin_http"]

[profile.dev]
opt-level = 1      
incremental = true  
debug = 1              

[profile.dev.package."*"]
opt-level = 2       

[profile.release]
opt-level = 3
lto = "thin"          
codegen-units = 1      
strip = true          
panic = "abort"     

[profile.bench]
inherits = "release"
debug = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unsafe_code = "warn"     
missing_docs = "warn"       
unused_imports = "warn"
unused_variables = "warn"
