[package]
name = "aluminium"
version = "0.1.0"
edition = "2021"
authors = ["Oleg Pavlenko"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/olejaaaaaaaa/aluminium"
description = "vulkan-based graphics engine"
keywords = ["vulkan", "graphics", "rendering", "gamedev"]
categories = ["graphics", "game-engines", "rendering"]
build = "build.rs"

[workspace]
members = [
    ".",
    "examples/simple",
]
resolver = "2"

[workspace.dependencies]
ash = "0.38.0"
ash-window = "0.13.0"
vk-mem = "0.5.0"      
# TODO:                                         
gpu-allocator = { version = "0.28.0", features = ["vulkan"] }     
vk-sync = "0.1.6"
winit = { version = "0.30.12", features = ["rwh_06"] }
slotmap = "1.1.1"
bytemuck = { version = "1.24.0", features = ["derive"] }
log = { version = "0.4.29", default-features = false }
thiserror = "2.0.17"
profiling = "1.0.17"
parking_lot = "0.12.5"
# For reflection
naga = { version = "28.0.0", features = ["spv-in"] }
# Only for examples
env_logger = { version = "0.11.8", default-features = false }
gltf = "1.4.1"
image = "0.25.10"

[dependencies]
ash = { workspace = true }
ash-window = { workspace = true }
vk-mem = { workspace = true, optional = true }          
gpu-allocator = { workspace = true, optional = true }   
bytemuck = { workspace = true }
vk-sync = { workspace = true }
winit = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
slotmap = { workspace = true }
parking_lot = { workspace = true }
profiling = { workspace = true }
naga = { workspace = true , optional = true }

[features]
default = ["vma", "runtime-checks"]
gpu-allocator = ["dep:gpu-allocator"]
vma = ["dep:vk-mem"]
validation_layer = []
runtime-checks = ["dep:naga"]

[profile.dev]
opt-level = 1      
incremental = true  
debug = 1              

[profile.dev.package."*"]
opt-level = 2       

[profile.release]
features = ["vma"]
opt-level = 3
lto = "thin"          
codegen-units = 1      
strip = true          
panic = "abort"     

[profile.bench]
inherits = "release"
debug = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unsafe_code = "warn"     
missing_docs = "warn"       
unused_imports = "warn"
unused_variables = "warn"
