[package]
name = "aluminium"
version = "0.1.0"
edition = "2021"
authors = ["Oleg Pavlenko"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/olejaaaaaaaa/aluminium"
description = "vulkan-based graphics engine"
keywords = ["vulkan", "graphics", "rendering", "gamedev"]
categories = ["graphics", "game-engines", "rendering"]
build = "build.rs"

[workspace]
members = [
    ".", 
    "examples/*",
]
resolver = "2"

[workspace.dependencies]
ash = "0.38.0"
ash-window = "0.13.0"                                
gpu-allocator = { version = "0.28.0", features = ["vulkan"] }     
vk-sync = "0.1.6"
winit = { version = "0.30.12", features = ["rwh_06"] }
slotmap = "1.1.1"
bytemuck = { version = "1.24.0", features = ["derive"] }
tracing = "0.1.44"
thiserror = "2.0.17"
profiling = "1.0.17"
parking_lot = "0.12.5"
# For reflection(Optional)
naga = { version = "28.0.0", features = ["spv-in"] }
# Only for examples
tracing-subscriber = "0.3.23"
gltf = "1.4.1"
image = { version = "0.25.10", default-features = false, features = ["jpeg"] }
egui = { version = "0.34.1", default-features = false }

[dependencies]
ash = { workspace = true }
ash-window = { workspace = true }    
gpu-allocator = { workspace = true }   
bytemuck = { workspace = true }
vk-sync = { workspace = true }
winit = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
slotmap = { workspace = true }
parking_lot = { workspace = true }
profiling = { workspace = true }
naga = { workspace = true , optional = true }

[features]
default = ["layer_khronos_validation", "validation"]
layer_khronos_validation = []
reflection = []
validation = ["reflection"]

[profile.dev]
opt-level = 1      
incremental = true  
debug = 1              

[profile.dev.package."*"]
opt-level = 2       

[profile.release]
opt-level = 3
lto = "thin"          
codegen-units = 1      
strip = true          
panic = "abort"     

[profile.bench]
inherits = "release"
debug = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unsafe_code = "warn"     
missing_docs = "warn"       
unused_imports = "warn"
unused_variables = "warn"
